# least_squares_project

./: .gitignore  CMakeLists.txt  README.md
include/: estimator.hpp
src/: estimator.cpp  main.cpp
test/: test_estimator.cpp
